bad/assign_binop_bne_void.example_compiler_output
ERROR
[1mbad/assign_binop_bne_void.lat:7:9: [1;31merror: [0;1mleft side is not assignable[m
	x != y = vfunc();
	       [1;32m^[m
[1mbad/assign_binop_bne_void.lat:7:2: [1;34mnote: [0;1mleft side starts here[m
	x != y = vfunc();
	[1;32m^[m
